# chl_personal_cinema

./: .gitignore  README.md  guia.md  sync_media.sh  update_kiosk.sh
backend/: dune  dune-project  main.ml  video_server.opam
backend/_build/: .db  .digest-db  log
backend/_build/default/: video_server.dune-package  video_server.install
backend/_build/default/.dune/: configurator  configurator.v2
backend/_build/default/.main.eobjs/byte/: dune__exe__Main.cmti
backend/_build/default/.main.eobjs/native/: dune__exe__Main.cmx
backend/_build/default/.merlin-conf/: exe-main
backend/_build/install/default/lib/video_server/: META  dune-package  opam
frontend/: .gitignore  index.css  main.html  script.js  vite.config.js
frontend/src/: App.jsx  index.css
