(lang dune 3.7)

(name video_server)

(generate_opam_files true)

(source
 (github bruno/video_server))

(authors "Bruno")

(maintainers "Bruno")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name video_server)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune dream)
 (tags
  (topics "to" "describe" "your" "project")))
